--- a/view/public/index.html
+++ b/view/public/index.html
@@ -5,7 +5,7 @@
 	
 </head>
 <body>
-	<form method="GET" action="../index.php">
+	<form method="GET" action="../registro.php">
 		<label>Grupos</label>
 		<input type="text" name="CantGrupos" id="CantGrupos" placeholder="Cantidad de grupos" autocomplete="off">
 		<input type="text" name="CantAlumnos" id="CantAlumnos" placeholder="Cantidad de alumnos" autocomplete="off">
