--- a/view/public/index.html
+++ b/view/public/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 	<form method="GET" action="../registro.php">
-		<label>Grupos</label>
-		<input type="text" name="CantGrupos" id="CantGrupos" placeholder="Cantidad de grupos" autocomplete="off">
+		<label>Ingrese la cantidad de alumnos</label>
 		<input type="text" name="CantAlumnos" id="CantAlumnos" placeholder="Cantidad de alumnos" autocomplete="off">
 		<input type="submit" value="Submit">
 	</form>
