--- a/view/css/style.css
+++ b/view/css/style.css
@@ -3,12 +3,11 @@
 	padding:0;
 }
 body{
-	color:#1C2833;
-	background-color: #FCF3CF;
+	color: #1C2833;
+	background-color: #048755;
 }
 
 header h1{
-	text-align: center;
 	font-size: 90px;
 }
 
@@ -18,15 +17,29 @@ header nav{
 
 header nav li{
 	display:inline-block;
-	margin-right: 100px;
+	margin-right: 10%;
 }
 
 header nav li a{
 	text-decoration: none;
-	color:#7D6608;
+	color:#1C2833;
 }
 
 
 .center{
 	text-align: center;
 }
+#visible{
+	width: 25%;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 15%;
+}
+
+
+.color-1 {color: #ffffff;}
+.color-2 {color: #490678;}
+.color-3 {color: #0e017a;}
+.color-4 {color: #69a5bc;}
+.color-5 {color: #048755;}
+.color-6 {color: #770909;}
